--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -134,6 +134,10 @@ input, select, textarea {
 		text-align: justify;
 	}
 
+	p.exp{
+		font-size: 14px;
+	}
+
 	h1, h2, h3, h4, h5, h6 {
 		color: #777;
 		font-weight: 700;
